1. Jump State 문제점 수정    -> Double Jump State에도 적용해야 함 2. TODO: 물리엔진 손보기... 답도없다....

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -78,6 +78,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetName>MyCookieRun</TargetName>
+    <OutDir>$(SolutionDir)OutputFile\bin\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
