--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="func.h" />
     <ClInclude Include="GameClient.h" />
     <ClInclude Include="CMouseMgr.h" />
+    <ClInclude Include="CJellyMgr.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="struct.h" />
@@ -248,6 +249,7 @@
     <ClCompile Include="CTimeMgr.cpp" />
     <ClCompile Include="CUI.cpp" />
     <ClCompile Include="func.cpp" />
+    <ClCompile Include="CJellyMgr.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="CMouseMgr.cpp" />
   </ItemGroup>
