--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="CSelectObj.h" />
     <ClInclude Include="CSlideState.h" />
     <ClInclude Include="CSound.h" />
+    <ClInclude Include="CSoundMgr.h" />
     <ClInclude Include="CStage.h" />
     <ClInclude Include="CStageMgr.h" />
     <ClInclude Include="CState.h" />
@@ -240,6 +241,7 @@
     <ClCompile Include="CSelectObj.cpp" />
     <ClCompile Include="CSlideState.cpp" />
     <ClCompile Include="CSound.cpp" />
+    <ClCompile Include="CSoundMgr.cpp" />
     <ClCompile Include="CStage.cpp" />
     <ClCompile Include="CStageMgr.cpp" />
     <ClCompile Include="CState.cpp" />
