1. 쿠키 죽는 것 표현! 2. 자이언트 효과 Collider 사이즈 조정 완료 3. 힙 손상 조금 잡았는데 아직 간간히 오류 발생 ㅠ 4. 현재 로고단계 제작중

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -142,9 +142,14 @@
     <ClInclude Include="CAnimation.h" />
     <ClInclude Include="CAnimator.h" />
     <ClInclude Include="CAsset.h" />
+    <ClInclude Include="CDashState.h" />
+    <ClInclude Include="CDeadByLifeState.h" />
+    <ClInclude Include="CDeadByObsState.h" />
     <ClInclude Include="CDoubleJumpState.h" />
     <ClInclude Include="CGameDataMgr.h" />
+    <ClInclude Include="CLevel_Logo.h" />
     <ClInclude Include="CPet.h" />
+    <ClInclude Include="CPetDashState.h" />
     <ClInclude Include="CPetRunState.h" />
     <ClInclude Include="CPetState.h" />
     <ClInclude Include="CPlayerState.h" />
@@ -161,7 +166,6 @@
     <ClInclude Include="CEntity.h" />
     <ClInclude Include="CFSM.h" />
     <ClInclude Include="CHandleMgr.h" />
-    <ClInclude Include="CInvState.h" />
     <ClInclude Include="CJelly.h" />
     <ClInclude Include="CJumpState.h" />
     <ClInclude Include="CKeyMgr.h" />
@@ -205,9 +209,14 @@
     <ClCompile Include="CAnimation.cpp" />
     <ClCompile Include="CAnimator.cpp" />
     <ClCompile Include="CAsset.cpp" />
+    <ClCompile Include="CDashState.cpp" />
+    <ClCompile Include="CDeadByLifeState.cpp" />
+    <ClCompile Include="CDeadByObsState.cpp" />
     <ClCompile Include="CDoubleJumpState.cpp" />
     <ClCompile Include="CGameDataMgr.cpp" />
+    <ClCompile Include="CLevel_Logo.cpp" />
     <ClCompile Include="CPet.cpp" />
+    <ClCompile Include="CPetDashState.cpp" />
     <ClCompile Include="CPetRunState.cpp" />
     <ClCompile Include="CPetState.cpp" />
     <ClCompile Include="CPlayerState.cpp" />
@@ -224,7 +233,6 @@
     <ClCompile Include="CEntity.cpp" />
     <ClCompile Include="CFSM.cpp" />
     <ClCompile Include="CHandleMgr.cpp" />
-    <ClCompile Include="CInvState.cpp" />
     <ClCompile Include="CJelly.cpp" />
     <ClCompile Include="CJumpState.cpp" />
     <ClCompile Include="CKeyMgr.cpp" />
